@@ -1,3 +1,11 @@
+2008-07-30  Matthias Clasen  <mclasen@redhat.com>
+
+	Bug 545457 – gdmsetup crashed with SIGSEGV in
+	g_unix_mount_guess_should_display()
+
+	* gunixvolumemonitor.c (get_mount_for_mount_path): Don't 
+	crash if no mount is found.
+
 2008-07-28  Matthias Clasen  <mclasen@redhat.com>
 
 	Bug 545203 – gfile.c: argument is different type.
